add_library(common-lib
    util/network_util.cpp
    util/StateDef.cpp
    util/InputDef.cpp
    util/InputUtil.cpp
    util/game_settings.cpp
    objects/CircleGameObject.cpp
    objects/Player.cpp
    objects/Mine.cpp
    objects/CircleRigidBody.cpp
    objects/Group.cpp
    events/EventController.cpp
    physics/PhysicsController.cpp
    physics/CollisionUtil.cpp
    physics/VectorUtil.cpp
    systems/GameObjectStore.cpp
    systems/GroupController.cpp
    systems/PlayerController.cpp
    systems/MineController.cpp
    systems/GameObjectController.cpp
    systems/GameController.cpp
    systems/ResourceController.cpp
    systems/LevelController.cpp
    factories/IdFactory.cpp
    bots/Bot.cpp
    metrics/TemporalMetric.cpp
    models/WinCondition.cpp
)

target_link_libraries(common-lib PUBLIC sfml-system sfml-graphics sfml-network Boost::boost)
